feat: implement get-current-round and helper functions also embed in round_start function

--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -143,6 +143,11 @@ functions:
         events:
             - websocket:
                 route: startRound
+    get-current-round-handler:
+        handler: src/lambda/handler.get_current_round
+        events:
+            - websocket:
+                route: getCurrentRound 
     end-round-handler:
         handler: src/lambda/handler.end_round
         events:
