TODO: 3 seconds delay for getting the results

--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -164,11 +164,11 @@ functions:
       - websocket:
           route: preparationStart
     timeout: 100
-  finish-battle-handler:
-    handler: src/lambda/handler.finish_battle_handler
+  get-final-result:
+    handler: src/lambda/handler.get_final_result
     events:
       - websocket:
-          route: finishBattle
+          route: getFinalResult
 
 custom:
   customDomain:
