fix(api-key): Add env to stage

--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -25,6 +25,8 @@ provider:
     REDIS_PORT: ${ssm:/naruhodoo/${self:provider.stage}/redis/port, env:REDIS_PORT}
     REDIS_DB: ${ssm:/naruhodoo/${self:provider.stage}/redis/db, env:REDIS_DB}
     DYNAMODB_WS_CONNECTION_TABLE: ${ssm:/naruhodoo/${self:provider.stage}/dynamodb/ws_connection_table, env:DYNAMODB_WS_CONNECTION_TABLE}
+    OPENAI_API_KEY: ${ssm:/naruhodoo/${self:provider.stage}/openaikey, env:OPENAI_API_KEY}
+
   iam:
     role:
       statements:
